# qLiteVM

./: CMakeLists.txt  io_control.c  io_control.h  main.h  vm_core.c  vm_core.h  vm_globals.h  vm_image.c  vm_image.h  vm_instructions.h  vm_memory.c  vm_memory.h  vm_registers.h  vm_utilities.c  vm_utilities.h
C/: io_control.c  io_control.h  main.c  main.h  vm_core.c  vm_core.h  vm_globals.h  vm_image.c  vm_image.h  vm_instructions.h  vm_memory.c  vm_memory.h  vm_registers.h  vm_utilities.c  vm_utilities.h
C#/: Program.cs  qLiteVM.sln
